--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Lab application</string>
     <string name="editmessage">"I\'m an EditText"</string>
     <string name="hinttext">"Write something here"</string>
+    <string name="same_question">"Do you drink coffee?"</string>
 </resources>
