--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
     <string name="app_name">Lab application</string>
-    <string name="editmessage">"I\'m an EditText"</string>
-    <string name="hinttext">"Write something here"</string>
-    <string name="same_question">"Do you drink coffee?"</string>
+    <string name="spin_message">"Spin flag"</string>
+    <string name="Button">Button</string>
 </resources>
